fix: sidebar to center on mobile

--- a/css/sidebarAndCatalog.css
+++ b/css/sidebarAndCatalog.css
@@ -3,6 +3,7 @@
 .containerMain {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 15px;
 }
 
